// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`The Jira App Components > Location: APP_CONFIG, Component: <App /> > should go through the installation flow successfully 1`] = `
<div
  data-test-id="oauth-content"
>
  <p
    class="paragraph-light css-ki4iwd"
    data-test-id="cf-ui-paragraph"
  >
    Your Jira session will expire soon. Reauthenticate now to continue uninterrupted.
    <br />
    <br />
  </p>
  <button
    class="css-dt2tyy"
    data-test-id="oauth-button"
    type="button"
  >
    <span
      class="css-40g50j"
    >
      Reauthenticate
    </span>
  </button>
</div>
`;

exports[`The Jira App Components > Location: APP_CONFIG, Component: <App /> > should setReady and go through the oauth flow successfully 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="app"
      >
        <div
          class="background"
        />
        <div
          class="body"
        >
          <div
            class="config"
          >
            <h1
              class="css-ow69k3"
              data-test-id="cf-ui-heading"
            >
              Connect Jira
            </h1>
            <p
              class="css-ki4iwd"
              data-test-id="cf-ui-paragraph"
            >
              Connect your Jira instance to Contentful to link Contentful entries to Jira issues.
            </p>
            <div
              data-test-id="oauth-content"
            >
              <button
                class="css-dt2tyy"
                data-test-id="oauth-button"
                type="button"
              >
                <span
                  class="css-40g50j"
                >
                  Connect to Jira
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="logo"
        >
          <header>
            <img
              alt="Jira Software"
              src="/src/components/logo.svg"
            />
          </header>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="app"
    >
      <div
        class="background"
      />
      <div
        class="body"
      >
        <div
          class="config"
        >
          <h1
            class="css-ow69k3"
            data-test-id="cf-ui-heading"
          >
            Connect Jira
          </h1>
          <p
            class="css-ki4iwd"
            data-test-id="cf-ui-paragraph"
          >
            Connect your Jira instance to Contentful to link Contentful entries to Jira issues.
          </p>
          <div
            data-test-id="oauth-content"
          >
            <button
              class="css-dt2tyy"
              data-test-id="oauth-button"
              type="button"
            >
              <span
                class="css-40g50j"
              >
                Connect to Jira
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="logo"
      >
        <header>
          <img
            alt="Jira Software"
            src="/src/components/logo.svg"
          />
        </header>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`The Jira App Components > Location: APP_CONFIG, Component: <App /> > should setReady and go through the oauth flow successfully 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="app"
      >
        <div
          class="background"
        />
        <div
          class="body"
        >
          <div
            class="config"
          >
            <div
              class="configuration"
              data-test-id="configuration"
            >
              <h1
                class="css-ow69k3"
                data-test-id="cf-ui-heading"
              >
                Configure
              </h1>
              <p
                class="css-ki4iwd"
                data-test-id="cf-ui-paragraph"
              >
                Select the Jira site and project you want to connect
              </p>
              <div
                class="jira-config"
                data-test-id="instance-step"
              >
                <div
                  class="css-1jmxdak selector"
                >
                  <select
                    class="css-hcyaiw"
                    data-test-id="instance-selector"
                  >
                    <option
                      data-test-id="cf-ui-select-option"
                      value=""
                    >
                      Select a site
                    </option>
                  </select>
                  <svg
                    aria-hidden="true"
                    class="css-14n9xrq"
                    data-test-id="cf-ui-icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
                    />
                  </svg>
                </div>
                <div
                  class="search-projects"
                >
                  <input
                    class="css-82ji86"
                    data-test-id="cf-ui-text-input"
                    placeholder="Search for a project"
                    type="text"
                    value=""
                    width="full"
                  />
                  <div
                    class="search-projects-results"
                  />
                </div>
              </div>
              <div
                class="section"
              >
                <h1
                  class="css-ow69k3"
                  data-test-id="cf-ui-heading"
                >
                  Get Jira companion app
                </h1>
                <p
                  class="css-ki4iwd"
                  data-test-id="cf-ui-paragraph"
                >
                  The companion app must be installed in your Jira instance in order for Contentful to link to Jira issues.
                </p>
                <p
                  class="css-ki4iwd"
                  data-test-id="cf-ui-paragraph"
                >
                  <button
                    class="css-ndrb9n"
                    data-test-id="cf-ui-button"
                    type="button"
                  >
                    <span
                      class="css-40g50j"
                    >
                      Get companion app for Jira Cloud
                    </span>
                  </button>
                  <br />
                </p>
              </div>
              <h1
                class="css-ow69k3"
                data-test-id="cf-ui-heading"
              >
                Assign to content types
              </h1>
              <p
                class="css-ki4iwd"
                data-test-id="cf-ui-paragraph"
              >
                Pick the content types where Jira will install to the sidebar.
              </p>
              <div
                class="content-types-config"
                data-test-id="content-types"
              >
                <article
                  class="css-1pab3wc"
                  data-test-id="cf-ui-note"
                >
                  <svg
                    aria-hidden="true"
                    class="css-oy8hxm"
                    data-test-id="cf-ui-icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                    />
                  </svg>
                  <div
                    class="css-j7qwjs"
                  >
                    <div
                      class="css-n69953"
                    >
                      There are 
                      <strong>
                        no content types
                      </strong>
                       in this environment. You can add a
                       
                      <a
                        class="css-1wm2dh8"
                        data-test-id="cf-ui-text-link"
                        href="https://app.contentful.com/spaces/test-space/content_types"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        <span
                          class="css-x1sij0"
                        >
                          <span>
                            content type
                          </span>
                        </span>
                      </a>
                       
                      and assign it to the app from this screen.
                    </div>
                  </div>
                </article>
              </div>
            </div>
          </div>
        </div>
        <div
          class="logo"
        >
          <header>
            <img
              alt="Jira Software"
              src="/src/components/logo.svg"
            />
          </header>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="app"
    >
      <div
        class="background"
      />
      <div
        class="body"
      >
        <div
          class="config"
        >
          <div
            class="configuration"
            data-test-id="configuration"
          >
            <h1
              class="css-ow69k3"
              data-test-id="cf-ui-heading"
            >
              Configure
            </h1>
            <p
              class="css-ki4iwd"
              data-test-id="cf-ui-paragraph"
            >
              Select the Jira site and project you want to connect
            </p>
            <div
              class="jira-config"
              data-test-id="instance-step"
            >
              <div
                class="css-1jmxdak selector"
              >
                <select
                  class="css-hcyaiw"
                  data-test-id="instance-selector"
                >
                  <option
                    data-test-id="cf-ui-select-option"
                    value=""
                  >
                    Select a site
                  </option>
                </select>
                <svg
                  aria-hidden="true"
                  class="css-14n9xrq"
                  data-test-id="cf-ui-icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
                  />
                </svg>
              </div>
              <div
                class="search-projects"
              >
                <input
                  class="css-82ji86"
                  data-test-id="cf-ui-text-input"
                  placeholder="Search for a project"
                  type="text"
                  value=""
                  width="full"
                />
                <div
                  class="search-projects-results"
                />
              </div>
            </div>
            <div
              class="section"
            >
              <h1
                class="css-ow69k3"
                data-test-id="cf-ui-heading"
              >
                Get Jira companion app
              </h1>
              <p
                class="css-ki4iwd"
                data-test-id="cf-ui-paragraph"
              >
                The companion app must be installed in your Jira instance in order for Contentful to link to Jira issues.
              </p>
              <p
                class="css-ki4iwd"
                data-test-id="cf-ui-paragraph"
              >
                <button
                  class="css-ndrb9n"
                  data-test-id="cf-ui-button"
                  type="button"
                >
                  <span
                    class="css-40g50j"
                  >
                    Get companion app for Jira Cloud
                  </span>
                </button>
                <br />
              </p>
            </div>
            <h1
              class="css-ow69k3"
              data-test-id="cf-ui-heading"
            >
              Assign to content types
            </h1>
            <p
              class="css-ki4iwd"
              data-test-id="cf-ui-paragraph"
            >
              Pick the content types where Jira will install to the sidebar.
            </p>
            <div
              class="content-types-config"
              data-test-id="content-types"
            >
              <article
                class="css-1pab3wc"
                data-test-id="cf-ui-note"
              >
                <svg
                  aria-hidden="true"
                  class="css-oy8hxm"
                  data-test-id="cf-ui-icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                  />
                </svg>
                <div
                  class="css-j7qwjs"
                >
                  <div
                    class="css-n69953"
                  >
                    There are 
                    <strong>
                      no content types
                    </strong>
                     in this environment. You can add a
                     
                    <a
                      class="css-1wm2dh8"
                      data-test-id="cf-ui-text-link"
                      href="https://app.contentful.com/spaces/test-space/content_types"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <span
                        class="css-x1sij0"
                      >
                        <span>
                          content type
                        </span>
                      </span>
                    </a>
                     
                    and assign it to the app from this screen.
                  </div>
                </div>
              </article>
            </div>
          </div>
        </div>
      </div>
      <div
        class="logo"
      >
        <header>
          <img
            alt="Jira Software"
            src="/src/components/logo.svg"
          />
        </header>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`The Jira App Components > Location: ENTRY_SIDEBAR, Component: <Jira /> > should load the sidebar app and show linked issues 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <article
          class="jira-ticket css-g7z2uu"
          data-test-id="cf-ui-card"
        >
          <div
            class="css-1cjnmwb"
            data-card-part="wrapper"
          >
            <div
              class="css-161cbg"
              data-card-part="content"
            >
              <div
                class="primary"
              >
                <div
                  class="top"
                >
                  <div
                    class="tag css-fge003"
                    data-test-id="cf-ui-badge"
                  >
                    <span
                      class="css-1f8vwjn"
                      data-test-id="cf-ui-caption"
                    />
                  </div>
                  <article
                    class="css-g7z2uu"
                    data-test-id="cf-ui-card"
                  >
                    <div
                      class="css-1cjnmwb"
                      data-card-part="wrapper"
                    >
                      <div
                        class="css-161cbg"
                        data-card-part="content"
                      >
                        <button
                          class="css-lwe3q8"
                          data-test-id="cf-ui-menu-item_5000"
                          role="menuitem"
                          tabindex="-1"
                        >
                          Open in Jira
                        </button>
                        <button
                          class="css-lwe3q8"
                          data-test-id="cf-ui-menu-item_5000"
                          role="menuitem"
                          tabindex="-1"
                        >
                          Unlink
                        </button>
                      </div>
                    </div>
                  </article>
                </div>
                <div
                  data-test-id="issue-summary"
                >
                  <a
                    class="css-1wm2dh8 summary"
                    data-test-id="cf-ui-text-link"
                  >
                    <span
                      class="css-x1sij0"
                    />
                  </a>
                </div>
              </div>
              <div
                class="meta"
              >
                <div
                  class="status"
                >
                  <span
                    class="css-1nqn0g6"
                  >
                    <img
                      alt="Story"
                      aria-describedby="tooltip_5000"
                      class="type"
                    />
                  </span>
                </div>
                <div
                  class="details"
                >
                  <a
                    class="css-1wm2dh8"
                    data-test-id="cf-ui-text-link"
                  >
                    <span
                      class="css-x1sij0"
                    >
                      <span>
                        <span
                          class="key"
                        >
                          MKE-1389
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </article>
        <div
          class="search"
        >
          <input
            class="css-82ji86"
            data-test-id="jira-issue-search"
            placeholder="Search for Jira issues to link"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <article
        class="jira-ticket css-g7z2uu"
        data-test-id="cf-ui-card"
      >
        <div
          class="css-1cjnmwb"
          data-card-part="wrapper"
        >
          <div
            class="css-161cbg"
            data-card-part="content"
          >
            <div
              class="primary"
            >
              <div
                class="top"
              >
                <div
                  class="tag css-fge003"
                  data-test-id="cf-ui-badge"
                >
                  <span
                    class="css-1f8vwjn"
                    data-test-id="cf-ui-caption"
                  />
                </div>
                <article
                  class="css-g7z2uu"
                  data-test-id="cf-ui-card"
                >
                  <div
                    class="css-1cjnmwb"
                    data-card-part="wrapper"
                  >
                    <div
                      class="css-161cbg"
                      data-card-part="content"
                    >
                      <button
                        class="css-lwe3q8"
                        data-test-id="cf-ui-menu-item_5000"
                        role="menuitem"
                        tabindex="-1"
                      >
                        Open in Jira
                      </button>
                      <button
                        class="css-lwe3q8"
                        data-test-id="cf-ui-menu-item_5000"
                        role="menuitem"
                        tabindex="-1"
                      >
                        Unlink
                      </button>
                    </div>
                  </div>
                </article>
              </div>
              <div
                data-test-id="issue-summary"
              >
                <a
                  class="css-1wm2dh8 summary"
                  data-test-id="cf-ui-text-link"
                >
                  <span
                    class="css-x1sij0"
                  />
                </a>
              </div>
            </div>
            <div
              class="meta"
            >
              <div
                class="status"
              >
                <span
                  class="css-1nqn0g6"
                >
                  <img
                    alt="Story"
                    aria-describedby="tooltip_5000"
                    class="type"
                  />
                </span>
              </div>
              <div
                class="details"
              >
                <a
                  class="css-1wm2dh8"
                  data-test-id="cf-ui-text-link"
                >
                  <span
                    class="css-x1sij0"
                  >
                    <span>
                      <span
                        class="key"
                      >
                        MKE-1389
                      </span>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </article>
      <div
        class="search"
      >
        <input
          class="css-82ji86"
          data-test-id="jira-issue-search"
          placeholder="Search for Jira issues to link"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`The Jira App Components > Location: ENTRY_SIDEBAR, Component: <Jira /> > should search for entries and allow linking 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <article
          class="jira-ticket css-g7z2uu"
          data-test-id="cf-ui-card"
        >
          <div
            class="css-1cjnmwb"
            data-card-part="wrapper"
          >
            <div
              class="css-161cbg"
              data-card-part="content"
            >
              <div
                class="primary"
              >
                <div
                  class="top"
                >
                  <div
                    class="tag css-fge003"
                    data-test-id="cf-ui-badge"
                  >
                    <span
                      class="css-1f8vwjn"
                      data-test-id="cf-ui-caption"
                    />
                  </div>
                  <article
                    class="css-g7z2uu"
                    data-test-id="cf-ui-card"
                  >
                    <div
                      class="css-1cjnmwb"
                      data-card-part="wrapper"
                    >
                      <div
                        class="css-161cbg"
                        data-card-part="content"
                      >
                        <button
                          class="css-lwe3q8"
                          data-test-id="cf-ui-menu-item_5000"
                          role="menuitem"
                          tabindex="-1"
                        >
                          Open in Jira
                        </button>
                        <button
                          class="css-lwe3q8"
                          data-test-id="cf-ui-menu-item_5000"
                          role="menuitem"
                          tabindex="-1"
                        >
                          Unlink
                        </button>
                      </div>
                    </div>
                  </article>
                </div>
                <div
                  data-test-id="issue-summary"
                >
                  <a
                    class="css-1wm2dh8 summary"
                    data-test-id="cf-ui-text-link"
                  >
                    <span
                      class="css-x1sij0"
                    />
                  </a>
                </div>
              </div>
              <div
                class="meta"
              >
                <div
                  class="status"
                >
                  <span
                    class="css-1nqn0g6"
                  >
                    <img
                      alt="Story"
                      aria-describedby="tooltip_5000"
                      class="type"
                    />
                  </span>
                </div>
                <div
                  class="details"
                >
                  <a
                    class="css-1wm2dh8"
                    data-test-id="cf-ui-text-link"
                  >
                    <span
                      class="css-x1sij0"
                    >
                      <span>
                        <span
                          class="key"
                        >
                          MKE-1389
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </article>
        <div
          class="search"
        >
          <input
            class="css-82ji86"
            data-test-id="jira-issue-search"
            placeholder="Search for Jira issues to link"
            type="text"
            value="MKE-1389"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <article
        class="jira-ticket css-g7z2uu"
        data-test-id="cf-ui-card"
      >
        <div
          class="css-1cjnmwb"
          data-card-part="wrapper"
        >
          <div
            class="css-161cbg"
            data-card-part="content"
          >
            <div
              class="primary"
            >
              <div
                class="top"
              >
                <div
                  class="tag css-fge003"
                  data-test-id="cf-ui-badge"
                >
                  <span
                    class="css-1f8vwjn"
                    data-test-id="cf-ui-caption"
                  />
                </div>
                <article
                  class="css-g7z2uu"
                  data-test-id="cf-ui-card"
                >
                  <div
                    class="css-1cjnmwb"
                    data-card-part="wrapper"
                  >
                    <div
                      class="css-161cbg"
                      data-card-part="content"
                    >
                      <button
                        class="css-lwe3q8"
                        data-test-id="cf-ui-menu-item_5000"
                        role="menuitem"
                        tabindex="-1"
                      >
                        Open in Jira
                      </button>
                      <button
                        class="css-lwe3q8"
                        data-test-id="cf-ui-menu-item_5000"
                        role="menuitem"
                        tabindex="-1"
                      >
                        Unlink
                      </button>
                    </div>
                  </div>
                </article>
              </div>
              <div
                data-test-id="issue-summary"
              >
                <a
                  class="css-1wm2dh8 summary"
                  data-test-id="cf-ui-text-link"
                >
                  <span
                    class="css-x1sij0"
                  />
                </a>
              </div>
            </div>
            <div
              class="meta"
            >
              <div
                class="status"
              >
                <span
                  class="css-1nqn0g6"
                >
                  <img
                    alt="Story"
                    aria-describedby="tooltip_5000"
                    class="type"
                  />
                </span>
              </div>
              <div
                class="details"
              >
                <a
                  class="css-1wm2dh8"
                  data-test-id="cf-ui-text-link"
                >
                  <span
                    class="css-x1sij0"
                  >
                    <span>
                      <span
                        class="key"
                      >
                        MKE-1389
                      </span>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </article>
      <div
        class="search"
      >
        <input
          class="css-82ji86"
          data-test-id="jira-issue-search"
          placeholder="Search for Jira issues to link"
          type="text"
          value="MKE-1389"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`The Jira App Components > Location: ENTRY_SIDEBAR, Component: <Jira /> > should show an empty list when the resource returns nothing 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <article
          class="jira-ticket css-g7z2uu"
          data-test-id="cf-ui-card"
        >
          <div
            class="css-1cjnmwb"
            data-card-part="wrapper"
          >
            <div
              class="css-161cbg"
              data-card-part="content"
            >
              <div
                class="primary"
              >
                <div
                  class="top"
                >
                  <div
                    class="tag css-fge003"
                    data-test-id="cf-ui-badge"
                  >
                    <span
                      class="css-1f8vwjn"
                      data-test-id="cf-ui-caption"
                    />
                  </div>
                  <article
                    class="css-g7z2uu"
                    data-test-id="cf-ui-card"
                  >
                    <div
                      class="css-1cjnmwb"
                      data-card-part="wrapper"
                    >
                      <div
                        class="css-161cbg"
                        data-card-part="content"
                      >
                        <button
                          class="css-lwe3q8"
                          data-test-id="cf-ui-menu-item_5000"
                          role="menuitem"
                          tabindex="-1"
                        >
                          Open in Jira
                        </button>
                        <button
                          class="css-lwe3q8"
                          data-test-id="cf-ui-menu-item_5000"
                          role="menuitem"
                          tabindex="-1"
                        >
                          Unlink
                        </button>
                      </div>
                    </div>
                  </article>
                </div>
                <div
                  data-test-id="issue-summary"
                >
                  <a
                    class="css-1wm2dh8 summary"
                    data-test-id="cf-ui-text-link"
                  >
                    <span
                      class="css-x1sij0"
                    />
                  </a>
                </div>
              </div>
              <div
                class="meta"
              >
                <div
                  class="status"
                >
                  <span
                    class="css-1nqn0g6"
                  >
                    <img
                      alt="Story"
                      aria-describedby="tooltip_5000"
                      class="type"
                    />
                  </span>
                </div>
                <div
                  class="details"
                >
                  <a
                    class="css-1wm2dh8"
                    data-test-id="cf-ui-text-link"
                  >
                    <span
                      class="css-x1sij0"
                    >
                      <span>
                        <span
                          class="key"
                        >
                          MKE-1389
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </article>
        <div
          class="search"
        >
          <input
            class="css-82ji86"
            data-test-id="jira-issue-search"
            placeholder="Search for Jira issues to link"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <article
        class="jira-ticket css-g7z2uu"
        data-test-id="cf-ui-card"
      >
        <div
          class="css-1cjnmwb"
          data-card-part="wrapper"
        >
          <div
            class="css-161cbg"
            data-card-part="content"
          >
            <div
              class="primary"
            >
              <div
                class="top"
              >
                <div
                  class="tag css-fge003"
                  data-test-id="cf-ui-badge"
                >
                  <span
                    class="css-1f8vwjn"
                    data-test-id="cf-ui-caption"
                  />
                </div>
                <article
                  class="css-g7z2uu"
                  data-test-id="cf-ui-card"
                >
                  <div
                    class="css-1cjnmwb"
                    data-card-part="wrapper"
                  >
                    <div
                      class="css-161cbg"
                      data-card-part="content"
                    >
                      <button
                        class="css-lwe3q8"
                        data-test-id="cf-ui-menu-item_5000"
                        role="menuitem"
                        tabindex="-1"
                      >
                        Open in Jira
                      </button>
                      <button
                        class="css-lwe3q8"
                        data-test-id="cf-ui-menu-item_5000"
                        role="menuitem"
                        tabindex="-1"
                      >
                        Unlink
                      </button>
                    </div>
                  </div>
                </article>
              </div>
              <div
                data-test-id="issue-summary"
              >
                <a
                  class="css-1wm2dh8 summary"
                  data-test-id="cf-ui-text-link"
                >
                  <span
                    class="css-x1sij0"
                  />
                </a>
              </div>
            </div>
            <div
              class="meta"
            >
              <div
                class="status"
              >
                <span
                  class="css-1nqn0g6"
                >
                  <img
                    alt="Story"
                    aria-describedby="tooltip_5000"
                    class="type"
                  />
                </span>
              </div>
              <div
                class="details"
              >
                <a
                  class="css-1wm2dh8"
                  data-test-id="cf-ui-text-link"
                >
                  <span
                    class="css-x1sij0"
                  >
                    <span>
                      <span
                        class="key"
                      >
                        MKE-1389
                      </span>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </article>
      <div
        class="search"
      >
        <input
          class="css-82ji86"
          data-test-id="jira-issue-search"
          placeholder="Search for Jira issues to link"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`The Jira App Components > Location: ENTRY_SIDEBAR, Component: <Jira /> > should show an unauthorized message when given a 403 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <article
          class="jira-ticket css-g7z2uu"
          data-test-id="cf-ui-card"
        >
          <div
            class="css-1cjnmwb"
            data-card-part="wrapper"
          >
            <div
              class="css-161cbg"
              data-card-part="content"
            >
              <div
                class="primary"
              >
                <div
                  class="top"
                >
                  <div
                    class="tag css-fge003"
                    data-test-id="cf-ui-badge"
                  >
                    <span
                      class="css-1f8vwjn"
                      data-test-id="cf-ui-caption"
                    />
                  </div>
                  <article
                    class="css-g7z2uu"
                    data-test-id="cf-ui-card"
                  >
                    <div
                      class="css-1cjnmwb"
                      data-card-part="wrapper"
                    >
                      <div
                        class="css-161cbg"
                        data-card-part="content"
                      >
                        <button
                          class="css-lwe3q8"
                          data-test-id="cf-ui-menu-item_5000"
                          role="menuitem"
                          tabindex="-1"
                        >
                          Open in Jira
                        </button>
                        <button
                          class="css-lwe3q8"
                          data-test-id="cf-ui-menu-item_5000"
                          role="menuitem"
                          tabindex="-1"
                        >
                          Unlink
                        </button>
                      </div>
                    </div>
                  </article>
                </div>
                <div
                  data-test-id="issue-summary"
                >
                  <a
                    class="css-1wm2dh8 summary"
                    data-test-id="cf-ui-text-link"
                  >
                    <span
                      class="css-x1sij0"
                    />
                  </a>
                </div>
              </div>
              <div
                class="meta"
              >
                <div
                  class="status"
                >
                  <span
                    class="css-1nqn0g6"
                  >
                    <img
                      alt="Story"
                      aria-describedby="tooltip_5000"
                      class="type"
                    />
                  </span>
                </div>
                <div
                  class="details"
                >
                  <a
                    class="css-1wm2dh8"
                    data-test-id="cf-ui-text-link"
                  >
                    <span
                      class="css-x1sij0"
                    >
                      <span>
                        <span
                          class="key"
                        >
                          MKE-1389
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </article>
        <div
          class="search"
        >
          <input
            class="css-82ji86"
            data-test-id="jira-issue-search"
            placeholder="Search for Jira issues to link"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <article
        class="jira-ticket css-g7z2uu"
        data-test-id="cf-ui-card"
      >
        <div
          class="css-1cjnmwb"
          data-card-part="wrapper"
        >
          <div
            class="css-161cbg"
            data-card-part="content"
          >
            <div
              class="primary"
            >
              <div
                class="top"
              >
                <div
                  class="tag css-fge003"
                  data-test-id="cf-ui-badge"
                >
                  <span
                    class="css-1f8vwjn"
                    data-test-id="cf-ui-caption"
                  />
                </div>
                <article
                  class="css-g7z2uu"
                  data-test-id="cf-ui-card"
                >
                  <div
                    class="css-1cjnmwb"
                    data-card-part="wrapper"
                  >
                    <div
                      class="css-161cbg"
                      data-card-part="content"
                    >
                      <button
                        class="css-lwe3q8"
                        data-test-id="cf-ui-menu-item_5000"
                        role="menuitem"
                        tabindex="-1"
                      >
                        Open in Jira
                      </button>
                      <button
                        class="css-lwe3q8"
                        data-test-id="cf-ui-menu-item_5000"
                        role="menuitem"
                        tabindex="-1"
                      >
                        Unlink
                      </button>
                    </div>
                  </div>
                </article>
              </div>
              <div
                data-test-id="issue-summary"
              >
                <a
                  class="css-1wm2dh8 summary"
                  data-test-id="cf-ui-text-link"
                >
                  <span
                    class="css-x1sij0"
                  />
                </a>
              </div>
            </div>
            <div
              class="meta"
            >
              <div
                class="status"
              >
                <span
                  class="css-1nqn0g6"
                >
                  <img
                    alt="Story"
                    aria-describedby="tooltip_5000"
                    class="type"
                  />
                </span>
              </div>
              <div
                class="details"
              >
                <a
                  class="css-1wm2dh8"
                  data-test-id="cf-ui-text-link"
                >
                  <span
                    class="css-x1sij0"
                  >
                    <span>
                      <span
                        class="key"
                      >
                        MKE-1389
                      </span>
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </article>
      <div
        class="search"
      >
        <input
          class="css-82ji86"
          data-test-id="jira-issue-search"
          placeholder="Search for Jira issues to link"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
